fixed the input seciton to add spacing

--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
 h1 {
   font-size: 60px;
 }
+.createTaskSection {
+  margin: 30px auto;
+}
 .containerDiv {
   margin: auto;
   width: 85%;
